# glass_cleaning_drone_vision

./: .gitignore  CMakeLists.txt  README.md  build_x5.sh
config/: system_config.yaml
include/camera/: camera_calibration.h  gemini_camera.h
include/communication/: protocol.h  uart_interface.h
include/config/: system_config_loader.h
include/detection/: window_frame_detector.h
include/estimation/: displacement_estimator.h  kalman_filter.h
include/imu/: imu_processor.h
include/optical_flow/: depth_fusion.h  feature_detector.h  flow_calculator.h
include/preprocessing/: image_rectifier.h  noise_filter.h
include/reflection/: edge_sharpness.h  motion_symmetry.h  reflection_detector.h
include/simulator/: glass_simulator.h  reflection_simulator.h
src/: main.cpp
src/camera/: camera_calibration.cpp  gemini_camera.cpp
src/communication/: protocol.cpp  uart_interface.cpp
src/config/: system_config_loader.cpp
src/detection/: window_frame_detector.cpp
src/estimation/: displacement_estimator.cpp  kalman_filter.cpp
src/imu/: imu_processor.cpp
src/optical_flow/: depth_fusion.cpp  feature_detector.cpp  flow_calculator.cpp
src/preprocessing/: image_rectifier.cpp  noise_filter.cpp
src/reflection/: edge_sharpness.cpp  motion_symmetry.cpp  reflection_detector.cpp
src/simulator/: glass_simulator.cpp  reflection_simulator.cpp
